Apply tooltip for new tab button

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -30,11 +30,13 @@
       <div id="all-tabs">
       </div>
       <div class="after-tabs vbox">
-        <button class="newtab-button">➕</button>
+        <button class="newtab-button"
+                title="__MSG_tabbar.newTabButton.tooltip__">➕</button>
       </div>
     </div>
     <div class="after-tabs vbox">
-      <button class="newtab-button">➕</button>
+      <button class="newtab-button"
+              title="__MSG_tabbar.newTabButton.tooltip__">➕</button>
     </div>
     <ul id="dummy-tabs">
       <span id="dummy-favicon"></span>
