Show throbber for initializing sidebar

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -2,7 +2,7 @@
 <!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
-<html class="left">
+<html class="left initializing">
   <head>
     <meta charset="UTF-8">
     <script type="application/javascript" src="/common/tree/constants.js"></script>
@@ -41,6 +41,8 @@
     <ul id="dummy-tabs">
       <span id="dummy-favicon"></span>
     </ul>
-    <div id="blocking-screen"></div>
+    <div id="blocking-screen">
+      <span class="throbber"></span>
+    </div>
   </body>
 </html>
