Calculate tab size more correctly

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -40,6 +40,14 @@
     </div>
     <ul id="dummy-tabs">
       <span id="dummy-favicon"></span>
+      <li id="dummy-tab" class="tab">
+        <span class="favicon">
+          <span class="throbber"></span>
+        </span>
+        <span class="label">-</span>
+        <span class="counter">0</span>
+        <button class="closebox">0</button>
+      </li>
     </ul>
     <div id="blocking-screen">
       <span class="throbber"></span>
