Use more meaningful name

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -39,7 +39,7 @@
               title="__MSG_tabbar.newTabButton.tooltip__">➕</button>
     </div>
     <ul id="dummy-tabs">
-      <span id="dummy-favicon"></span>
+      <span id="dummy-favicon-size-box"></span>
       <li id="dummy-tab" class="tab">
         <span class="favicon">
           <span class="throbber"></span>
