--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -35,6 +35,7 @@
       </div>
     </div>
     <div class="after-tabs vbox">
+      <div id="invisible-tab-notifier"></div>
       <button class="newtab-button"
               title="__MSG_tabbar.newTabButton.tooltip__">➕</button>
     </div>
