Add option to switch left/right of the tab bar position

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -14,6 +14,15 @@
     <link rel="stylesheet" type="text/css" href="options.css"/>
   </head>
   <body>
+    <p>__MSG_config.sidebarPosition.caption__</p>
+    <ul id="style-radiogroup">
+      <li><label><input type="radio"
+                        name="sidebarPosition" value="1">
+            __MSG_config.sidebarPosition.left__</label></li>
+      <li><label><input type="radio"
+                        name="sidebarPosition" value="2">
+            __MSG_config.sidebarPosition.right__</label></li>
+    </ul>
     <p>__MSG_config.style.caption__</p>
     <ul id="style-radiogroup">
       <li><label><input type="radio"
