Introduce configs for debug mode

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -57,5 +57,15 @@
     <p><label><input id="debug"
                      type="checkbox">
              __MSG_config.debug.label__</label></p>
+    <div id="debug-configs">
+      <p><label><input id="acccelaratedTabDuplication"
+                       type="checkbox">
+               __MSG_config.acccelaratedTabDuplication.label__</label></p>
+      <p><label>__MSG_config.maximumAcceptableDelayForTabDuplication.before__
+               <input id="maximumAcceptableDelayForTabDuplication"
+                       type="number"
+                       size="6">
+               __MSG_config.maximumAcceptableDelayForTabDuplication.after__</label></p>
+    </div>
   </body>
 </html>
