Add ability to apply custom style rules

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -55,6 +55,13 @@
                      type="checkbox">
              __MSG_config.animation.label__</label></p>
 
+
+    <h1>__MSG_config.advanced.caption__</h1>
+    <p><label>__MSG_config.userStyleRules.label__</label></p>
+    <textarea id="userStyleRules"
+              rows="10"
+              style="width: 100%"></textarea>
+
     <hr/>
 
     <h1>__MSG_config.debug.caption__</h1>
