--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="/sidebar/sidebar.css"/>
     <style id="size-definition" type="text/css"></style>
     <link id="style-loader" rel="stylesheet" type="text/css" href=""/>
+    <style id="user-style-rules" type="text/css"></style>
   </head>
   <body>
     <div id="tabbar" class="vbox">
