--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -51,9 +51,31 @@
             <img src="style-sidebar.png"/>
             __MSG_config.style.sidebar__</label></li>
     </ul>
+    <p><label>__MSG_config.maxTreeLevel.before__
+              <input id="maxTreeLevel"
+                     type="number"
+                     size="3">
+             __MSG_config.maxTreeLevel.after__</label></p>
     <p><label><input id="animation"
                      type="checkbox">
              __MSG_config.animation.label__</label></p>
+
+
+    <h1>__MSG_config.treeBehavior.caption__</h1>
+
+    <p><label><input id="autoCollapseExpandSubtreeOnAttach"
+                     type="checkbox">
+             __MSG_config.autoCollapseExpandSubtreeOnAttach.label__</label></p>
+    <p><label><input id="autoCollapseExpandSubtreeOnSelect"
+                     type="checkbox">
+             __MSG_config.autoCollapseExpandSubtreeOnSelect.label__</label></p>
+    <p class="sub">
+       <label><input id="autoCollapseExpandSubtreeOnSelectExceptCurrentTabRemove"
+                     type="checkbox">
+             __MSG_config.autoCollapseExpandSubtreeOnSelectExceptCurrentTabRemove.label__</label></p>
+    <p><label><input id="autoExpandOnAttached"
+                     type="checkbox">
+             __MSG_config.autoExpandOnAttached.label__</label></p>
 
 
     <h1>__MSG_config.advanced.caption__</h1>
