Add more configuration UI

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -76,6 +76,14 @@
             __MSG_config.insertNewChildAt.last__</label></li>
     </ul>
 
+    <p><label><input id="autoGroupNewTabs"
+                     type="checkbox">
+              __MSG_config.autoGroupNewTabs.before__
+              <input id="autoGroupNewTabsTimeout"
+                     type="number"
+                     size="3">
+               __MSG_config.autoGroupNewTabs.after__</label></p>
+
     <p><label><input id="autoCollapseExpandSubtreeOnAttach"
                      type="checkbox">
              __MSG_config.autoCollapseExpandSubtreeOnAttach.label__</label></p>
