Add more configuration UI

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -61,7 +61,32 @@
              __MSG_config.animation.label__</label></p>
 
 
-    <h1>__MSG_config.treeBehavior.caption__</h1>
+    <h1>__MSG_config.newTab.caption__</h1>
+
+    <p><label>__MSG_config.autoAttachOnNewTabCommand.before__
+              <select id="autoAttachOnNewTabCommand">
+                <option value="0">__MSG_config.autoAttachOnNewTabCommand.independent__</option>
+                <option value="1">__MSG_config.autoAttachOnNewTabCommand.child__</option>
+                <option value="2">__MSG_config.autoAttachOnNewTabCommand.sibling__</option>
+                <option value="3">__MSG_config.autoAttachOnNewTabCommand.nextSibling__</option>
+              </select>
+              __MSG_config.autoAttachOnNewTabCommand.after__</label>
+    <p><label>__MSG_config.autoAttachOnNewTabButtonMiddleClick.before__
+              <select id="autoAttachOnNewTabButtonMiddleClick">
+                <option value="0">__MSG_config.autoAttachOnNewTabButtonMiddleClick.independent__</option>
+                <option value="1">__MSG_config.autoAttachOnNewTabButtonMiddleClick.child__</option>
+                <option value="2">__MSG_config.autoAttachOnNewTabButtonMiddleClick.sibling__</option>
+                <option value="3">__MSG_config.autoAttachOnNewTabButtonMiddleClick.nextSibling__</option>
+              </select>
+              __MSG_config.autoAttachOnNewTabButtonMiddleClick.after__</label>
+    <p><label>__MSG_config.autoAttachOnDuplicated.before__
+              <select id="autoAttachOnDuplicated">
+                <option value="0">__MSG_config.autoAttachOnDuplicated.independent__</option>
+                <option value="1">__MSG_config.autoAttachOnDuplicated.child__</option>
+                <option value="2">__MSG_config.autoAttachOnDuplicated.sibling__</option>
+                <option value="3">__MSG_config.autoAttachOnDuplicated.nextSibling__</option>
+              </select>
+              __MSG_config.autoAttachOnDuplicated.after__</label>
 
     <p>__MSG_config.insertNewChildAt.caption__</p>
     <ul>
@@ -83,6 +108,9 @@
                      type="number"
                      size="3">
                __MSG_config.autoGroupNewTabs.after__</label></p>
+
+
+    <h1>__MSG_config.treeBehavior.caption__</h1>
 
     <p><label><input id="autoCollapseExpandSubtreeOnAttach"
                      type="checkbox">
