Add context menu items and configuration UI

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -63,6 +63,33 @@
              __MSG_config.animation.label__</label></p>
 
 
+    <h1>__MSG_config.context.caption__</h1>
+    <p><label><input id="context_reloadTree"
+                     type="checkbox">
+              __MSG_context.reloadTree.label__</label></p>
+    <p><label><input id="context_reloadDescendants"
+                     type="checkbox">
+              __MSG_context.reloadDescendants.label__</label></p>
+    <p><label><input id="context_closeTree"
+                     type="checkbox">
+              __MSG_context.closeTree.label__</label></p>
+    <p><label><input id="context_closeDescendants"
+                     type="checkbox">
+              __MSG_context.closeDescendants.label__</label></p>
+    <p><label><input id="context_closeOthers"
+                     type="checkbox">
+              __MSG_context.closeOthers.label__</label></p>
+    <p><label><input id="context_collapseAll"
+                     type="checkbox">
+              __MSG_context.collapseAll.label__</label></p>
+    <p><label><input id="context_expandAll"
+                     type="checkbox">
+              __MSG_context.expandAll.label__</label></p>
+    <p><label><input id="context_bookmarkTree"
+                     type="checkbox">
+              __MSG_context.bookmarkTree.label__</label></p>
+
+
     <h1>__MSG_config.newTab.caption__</h1>
 
     <p><label>__MSG_config.autoAttachOnNewTabCommand.before__
