--- a/webextensions/background/background.html
+++ b/webextensions/background/background.html
@@ -17,6 +17,7 @@
     <script type="application/javascript" src="/common/tree/handlers.js"></script>
     <script type="application/javascript" src="/background/background.js"></script>
     <script type="application/javascript" src="/background/handlers.js"></script>
+    <script type="application/javascript" src="/background/context-menu.js"></script>
   </head>
   <body>
     <div id="all-tabs"></div>
