Add UI like about:config

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -206,6 +206,7 @@
                        type="number"
                        size="6">
                __MSG_config.maximumAcceptableDelayForTabDuplication.after__</label></p>
+      <h2>__MSG_config.all.caption__</h2>
     </div>
   </body>
 </html>
