Support contextual identities

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -15,6 +15,7 @@
     <script type="application/javascript" src="/common/tree/get-tabs.js"></script>
     <script type="application/javascript" src="/common/tree/tab-information.js"></script>
     <script type="application/javascript" src="/common/tree/tree-operations.js"></script>
+    <script type="application/javascript" src="/common/tree/contextual-identities.js"></script>
     <script type="application/javascript" src="/common/tree/handlers.js"></script>
     <script type="application/javascript" src="/sidebar/sidebar.js"></script>
     <script type="application/javascript" src="/sidebar/scroll.js"></script>
@@ -23,6 +24,7 @@
     <script type="application/javascript" src="/sidebar/drag-and-drop.js"></script>
     <link rel="stylesheet" type="text/css" href="/sidebar/sidebar.css"/>
     <style id="size-definition" type="text/css"></style>
+    <style id="contextual-identity-styling" type="text/css"></style>
     <link id="style-loader" rel="stylesheet" type="text/css" href=""/>
     <style id="user-style-rules" type="text/css"></style>
   </head>
