--- a/webextensions/background/background.html
+++ b/webextensions/background/background.html
@@ -14,6 +14,7 @@
     <script type="application/javascript" src="/common/tree/get-tabs.js"></script>
     <script type="application/javascript" src="/common/tree/tab-information.js"></script>
     <script type="application/javascript" src="/common/tree/tree-operations.js"></script>
+    <script type="application/javascript" src="/common/tree/contextual-identities.js"></script>
     <script type="application/javascript" src="/common/tree/handlers.js"></script>
     <script type="application/javascript" src="/background/background.js"></script>
     <script type="application/javascript" src="/background/handlers.js"></script>
