Add ability to open new tab with contextual identity

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -33,14 +33,21 @@
       <div id="all-tabs">
       </div>
       <div class="after-tabs vbox">
-        <button class="newtab-button"
-                title="__MSG_tabbar.newTabButton.tooltip__">➕</button>
+        <div class="newtab-button-box vbox">
+          <button class="newtab-button"
+                  title="__MSG_tabbar.newTabButton.tooltip__">➕
+          </button>
+          <select class="contextual-identities-selector"></select>
+        </div>
       </div>
     </div>
     <div class="after-tabs vbox">
       <div id="out-of-view-tab-notifier"></div>
-      <button class="newtab-button"
-              title="__MSG_tabbar.newTabButton.tooltip__">➕</button>
+      <div class="newtab-button-box vbox">
+        <button class="newtab-button"
+                title="__MSG_tabbar.newTabButton.tooltip__">➕</button>
+        <select class="contextual-identities-selector"></select>
+      </div>
     </div>
     <ul id="dummy-tabs">
       <span id="dummy-favicon-size-box"></span>
