Add tootip for container tab button

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -37,7 +37,8 @@
           <button class="newtab-button"
                   title="__MSG_tabbar.newTabButton.tooltip__">➕
           </button>
-          <select class="contextual-identities-selector"></select>
+          <select class="contextual-identities-selector"
+                  title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"></select>
         </div>
       </div>
     </div>
@@ -46,7 +47,8 @@
       <div class="newtab-button-box vbox">
         <button class="newtab-button"
                 title="__MSG_tabbar.newTabButton.tooltip__">➕</button>
-        <select class="contextual-identities-selector"></select>
+        <select class="contextual-identities-selector"
+                title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"></select>
       </div>
     </div>
     <ul id="dummy-tabs">
