Add configuration UI for parentTabBehaviorForChanges

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -182,6 +182,17 @@
               __MSG_config.closeParentBehavior.detach__</label></li>
       </ul>
     </fieldset>
+    <fieldset>
+      <legend>__MSG_config.parentTabBehaviorForChanges.caption__</legend>
+      <ul>
+        <li><label><input type="radio"
+                          name="parentTabBehaviorForChanges" value="0">
+              __MSG_config.parentTabBehaviorForChanges.always__</label></li>
+        <li><label><input type="radio"
+                          name="parentTabBehaviorForChanges" value="1">
+              __MSG_config.parentTabBehaviorForChanges.onlyWhenVisible__</label></li>
+      </ul>
+    </fieldset>
 
 
     <h1>__MSG_config.advanced.caption__</h1>
