--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -79,7 +79,7 @@
           title="__MSG_tabContextMenu.mute.label__">__MSG_tabContextMenu.mute.label__</li>
       <li id="context-unmute" class="require-context-tab"
           title="__MSG_tabContextMenu.unmute.label__">__MSG_tabContextMenu.unmute.label__</li>
-      <li class="context-separator require-context-tab"></li>
+      <li class="separator require-context-tab"></li>
       <li id="context-pin" class="require-context-tab"
           title="__MSG_tabContextMenu.pin.label__">__MSG_tabContextMenu.pin.label__</li>
       <li id="context-unpin" class="require-context-tab"
@@ -88,7 +88,7 @@
           title="__MSG_tabContextMenu.duplicate.label__">__MSG_tabContextMenu.duplicate.label__</li>
       <li id="context-tearOff" class="require-context-tab require-multiple-tabs"
           title="__MSG_tabContextMenu.tearOff.label__">__MSG_tabContextMenu.tearOff.label__</li>
-      <li class="context-separator require-context-tab"></li>
+      <li class="separator require-context-tab"></li>
       <li id="context-reloadAll" class="require-multiple-tabs"
           title="__MSG_tabContextMenu.reloadAll.label__">__MSG_tabContextMenu.reloadAll.label__</li>
       <li id="context-bookmarkAll" class="require-normal-tabs"
@@ -97,7 +97,7 @@
           title="__MSG_tabContextMenu.closeAfter.label__">__MSG_tabContextMenu.closeAfter.label__</li>
       <li id="context-closeOther" class="require-context-tab require-multiple-normal-tabs"
           title="__MSG_tabContextMenu.closeOther.label__">__MSG_tabContextMenu.closeOther.label__</li>
-      <li class="context-separator"></li>
+      <li class="separator"></li>
       <li id="context-undoClose"
           title="__MSG_tabContextMenu.undoClose.label__">__MSG_tabContextMenu.undoClose.label__</li>
       <li id="context-close" class="require-context-tab"
