Separate codes for fake context menu

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -6,6 +6,7 @@
   <head>
     <meta charset="UTF-8">
     <script type="application/javascript" src="/common/tree/constants.js"></script>
+    <script type="application/javascript" src="/common/fake-context-menu/constants.js"></script>
     <script type="application/javascript" src="/common/Configs.js"></script>
     <script type="application/javascript" src="/common/common.js"></script>
     <script type="application/javascript" src="/common/l10n.js"></script>
@@ -23,8 +24,8 @@
     <script type="application/javascript" src="/sidebar/handlers.js"></script>
     <script type="application/javascript" src="/sidebar/drag-and-drop.js"></script>
     <link rel="stylesheet" type="text/css" href="/sidebar/sidebar.css"/>
-    <script type="application/javascript" src="/sidebar/context-menu.js"></script>
-    <link rel="stylesheet" type="text/css" href="/sidebar/context-menu.css"/>
+    <script type="application/javascript" src="/common/fake-context-menu/sidebar.js"></script>
+    <link rel="stylesheet" type="text/css" href="/common/fake-context-menu/sidebar.css"/>
     <style id="size-definition" type="text/css"></style>
     <style id="contextual-identity-styling" type="text/css"></style>
     <link id="style-loader" rel="stylesheet" type="text/css" href=""/>
