--- a/webextensions/background/background.html
+++ b/webextensions/background/background.html
@@ -6,6 +6,8 @@
   <head>
     <meta charset="UTF-8">
     <script type="application/javascript" src="/common/tree/constants.js"></script>
+    <script type="application/javascript" src="/common/fake-context-menu/constants.js"></script>
+    <script type="application/javascript" src="/common/fake-context-menu/background.js"></script>
     <script type="application/javascript" src="/common/Configs.js"></script>
     <script type="application/javascript" src="/common/common.js"></script>
     <script type="application/javascript" src="/common/xpath.js"></script>
