Add option to control insertion position of new tabs from pinned tabs

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -133,6 +133,21 @@
       </ul>
     </fieldset>
 
+    <fieldset>
+      <legend>__MSG_config.insertNewTabFromPinnedTabAt.caption__</legend>
+      <ul>
+        <li><label><input type="radio"
+                          name="insertNewTabFromPinnedTabAt" value="-1">
+              __MSG_config.insertNewTabFromPinnedTabAt.noControl__</label></li>
+        <li><label><input type="radio"
+                          name="insertNewTabFromPinnedTabAt" value="0">
+              __MSG_config.insertNewTabFromPinnedTabAt.first__</label></li>
+        <li><label><input type="radio"
+                          name="insertNewTabFromPinnedTabAt" value="1">
+              __MSG_config.insertNewTabFromPinnedTabAt.last__</label></li>
+      </ul>
+    </fieldset>
+
     <p><label><input id="autoGroupNewTabs"
                      type="checkbox">
               __MSG_config.autoGroupNewTabs.before__
