Add checkbox for collapseExpandSubtreeByDblClick

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -172,6 +172,9 @@
     <p><label><input id="autoExpandOnAttached"
                      type="checkbox">
              __MSG_config.autoExpandOnAttached.label__</label></p>
+    <p><label><input id="collapseExpandSubtreeByDblClick"
+                     type="checkbox">
+             __MSG_config.collapseExpandSubtreeByDblClick.label__</label></p>
 
     <fieldset>
       <legend>__MSG_config.closeParentBehavior.caption__</legend>
