--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -33,6 +33,10 @@
               <img src="style-plain.png"/>
               __MSG_config.style.plain__</label></li>
         <li><label><input type="radio"
+                          name="style" value="plain-dark">
+              <img src="style-plain-dark.png"/>
+              __MSG_config.style.plain-dark__</label></li>
+        <li><label><input type="radio"
                           name="style" value="flat">
               <img src="style-flat.png"/>
               __MSG_config.style.flat__</label></li>
