--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -104,7 +104,7 @@
                 <option value="2">__MSG_config.autoAttachOnNewTabCommand.sibling__</option>
                 <option value="3">__MSG_config.autoAttachOnNewTabCommand.nextSibling__</option>
               </select>
-              __MSG_config.autoAttachOnNewTabCommand.after__</label>
+              __MSG_config.autoAttachOnNewTabCommand.after__</label></p>
     <p><label>__MSG_config.autoAttachOnNewTabButtonMiddleClick.before__
               <select id="autoAttachOnNewTabButtonMiddleClick">
                 <option value="0">__MSG_config.autoAttachOnNewTabButtonMiddleClick.independent__</option>
@@ -112,7 +112,7 @@
                 <option value="2">__MSG_config.autoAttachOnNewTabButtonMiddleClick.sibling__</option>
                 <option value="3">__MSG_config.autoAttachOnNewTabButtonMiddleClick.nextSibling__</option>
               </select>
-              __MSG_config.autoAttachOnNewTabButtonMiddleClick.after__</label>
+              __MSG_config.autoAttachOnNewTabButtonMiddleClick.after__</label></p>
     <p><label>__MSG_config.autoAttachOnDuplicated.before__
               <select id="autoAttachOnDuplicated">
                 <option value="0">__MSG_config.autoAttachOnDuplicated.independent__</option>
@@ -120,7 +120,7 @@
                 <option value="2">__MSG_config.autoAttachOnDuplicated.sibling__</option>
                 <option value="3">__MSG_config.autoAttachOnDuplicated.nextSibling__</option>
               </select>
-              __MSG_config.autoAttachOnDuplicated.after__</label>
+              __MSG_config.autoAttachOnDuplicated.after__</label></p>
 
     <fieldset>
       <legend>__MSG_config.insertNewChildAt.caption__</legend>
