Add configuration UI to guess new tab as opened by "new tab" command #1038

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -105,6 +105,12 @@
                 <option value="3">__MSG_config.autoAttachOnNewTabCommand.nextSibling__</option>
               </select>
               __MSG_config.autoAttachOnNewTabCommand.after__</label></p>
+    <p class="sub"><label><input id="guessNewOrphanTabAsOpenedByNewTabCommand"
+                                 type="checkbox">
+                          __MSG_config.guessNewOrphanTabAsOpenedByNewTabCommandUrl.before__
+                          <input id="guessNewOrphanTabAsOpenedByNewTabCommandUrl"
+                                 size="20">
+                           __MSG_config.guessNewOrphanTabAsOpenedByNewTabCommandUrl.after__</label></p>
     <p><label>__MSG_config.autoAttachOnNewTabButtonMiddleClick.before__
               <select id="autoAttachOnNewTabButtonMiddleClick">
                 <option value="0">__MSG_config.autoAttachOnNewTabButtonMiddleClick.independent__</option>
