Expose configuration to unfaviconize pinned tabs

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -63,6 +63,9 @@
                      type="number"
                      size="3">
              __MSG_config.maxTreeLevel.after__</label></p>
+    <p><label><input id="faviconizePinnedTabs"
+                     type="checkbox">
+             __MSG_config.faviconizePinnedTabs.label__</label></p>
     <p><label><input id="animation"
                      type="checkbox">
              __MSG_config.animation.label__</label></p>
