--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -18,6 +18,7 @@
     <script type="application/javascript" src="/common/tree/tree-operations.js"></script>
     <script type="application/javascript" src="/common/tree/contextual-identities.js"></script>
     <script type="application/javascript" src="/common/tree/handlers.js"></script>
+    <script type="application/javascript" src="/sidebar/TabFavIconHelper.js"></script>
     <script type="application/javascript" src="/sidebar/sidebar.js"></script>
     <script type="application/javascript" src="/sidebar/scroll.js"></script>
     <script type="application/javascript" src="/sidebar/pinned-tabs.js"></script>
