Add configuration UI for exception of auto grouping feature #1422

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -168,6 +168,11 @@
                      type="number"
                      size="3">
                __MSG_config.autoGroupNewTabs.after__</label></p>
+    <p class="sub"><label>__MSG_config.autoGroupNewTabsDelayOnNewWindow.before__
+                          <input id="autoGroupNewTabsDelayOnNewWindow"
+                                 type="number"
+                                 size="3">
+                          __MSG_config.autoGroupNewTabsDelayOnNewWindow.after__</label></p>
 
 
     <h1>__MSG_config.treeBehavior.caption__</h1>
