Fix too narrow height tabs in "Metal" theme

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -64,7 +64,7 @@
         </span>
         <span class="label">-</span>
         <span class="counter">0</span>
-        <button class="closebox">0</button>
+        <span class="closebox">0</button>
       </li>
     </ul>
     <div id="blocking-screen">
