Use more suitable term for the case: "end" instead of "last"

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -142,7 +142,7 @@
               __MSG_config.insertNewChildAt.first__</label></li>
         <li><label><input type="radio"
                           name="insertNewChildAt" value="1">
-              __MSG_config.insertNewChildAt.last__</label></li>
+              __MSG_config.insertNewChildAt.end__</label></li>
       </ul>
     </fieldset>
 
@@ -157,7 +157,7 @@
               __MSG_config.insertNewTabFromPinnedTabAt.first__</label></li>
         <li><label><input type="radio"
                           name="insertNewTabFromPinnedTabAt" value="1">
-              __MSG_config.insertNewTabFromPinnedTabAt.last__</label></li>
+              __MSG_config.insertNewTabFromPinnedTabAt.end__</label></li>
       </ul>
     </fieldset>
 
