Specify background color for dummy group tab

--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -2,3 +2,8 @@
 <meta charset="UTF-8">
 <link rel="favicon" href="">
 <title></title>
+<style type="text/css">
+  :root {
+    background: ThreeDFace;
+  }
+</style>
