Fill messages by HTML page self

--- a/webextensions/resources/updated-from-legacy.html
+++ b/webextensions/resources/updated-from-legacy.html
@@ -16,6 +16,7 @@
     height: 10em;
   }
 </style>
+<script type="application/javascript" src="./updated-from-legacy.js"></script>
 
 <h1 id="title"></h1>
 <div><img id="icon" src="24x24-light.svg" alt=""></div>
