Add more description for migration

--- a/webextensions/resources/updated-from-legacy.html
+++ b/webextensions/resources/updated-from-legacy.html
@@ -21,3 +21,4 @@
 <h1 id="title"></h1>
 <div><img id="icon" src="24x24-light.svg" alt=""></div>
 <p id="description"></p>
+<p id="migrateSessions"></p>
