Link to migration instruction

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -255,6 +255,9 @@
     </fieldset>
     <fieldset>
       <legend>__MSG_config.importedTreeStructureFromLegacy.label__</legend>
+      <p>__MSG_config.migrateSessionStore.before__
+         <a href="__MSG_config.migrateSessionStore.link.uri__">__MSG_config.migrateSessionStore.link.label__</a>
+         __MSG_config.migrateSessionStore.after__</p>
       <p><label><input id="migrateLegacyTreeStructure"
                        type="checkbox">
                __MSG_config.migrateLegacyTreeStructure.label__</label></p>
