Don't use innerHTML

--- a/webextensions/resources/updated-from-legacy.html
+++ b/webextensions/resources/updated-from-legacy.html
@@ -17,8 +17,9 @@
   }
 </style>
 <script type="application/javascript" src="./updated-from-legacy.js"></script>
+<script type="application/javascript" src="/common/l10n.js"></script>
 
-<h1 id="title"></h1>
+<h1 id="title">__MSG_extensionName__</h1>
 <div><img id="icon" src="24x24-light.svg" alt=""></div>
-<p id="description"></p>
-<p id="migrateSessions"></p>
+<p>__MSG_message.updatedFromLegacy.description__</p>
+<p>__MSG_message.updatedFromLegacy.migrateSessions.before__<a href="__MSG_updatedFromLegacy.migrateSessions.link.uri__">__MSG_message.updatedFromLegacy.migrateSessions.link.label__</a>__MSG_message.updatedFromLegacy.migrateSessions.after__</p>
