Use more meaningful label

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -226,7 +226,7 @@
               __MSG_config.parentTabBehaviorForChanges.always__</label></li>
         <li><label><input type="radio"
                           name="parentTabBehaviorForChanges" value="1">
-              __MSG_config.parentTabBehaviorForChanges.onlyWhenVisible__</label></li>
+              __MSG_config.parentTabBehaviorForChanges.alwaysButOnlyWhenVisible__</label></li>
       </ul>
     </fieldset>
 
