--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -227,6 +227,9 @@
         <li><label><input type="radio"
                           name="parentTabBehaviorForChanges" value="1">
               __MSG_config.parentTabBehaviorForChanges.alwaysButOnlyWhenVisible__</label></li>
+        <li><label><input type="radio"
+                          name="parentTabBehaviorForChanges" value="2">
+              __MSG_config.parentTabBehaviorForChanges.onlyInSidebar__</label></li>
       </ul>
     </fieldset>
 
