Allow to skip collapsed tab by Ctrl-(Shift-)Tab shortcut #1531

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <script type="application/javascript" src="/common/tree/constants.js"></script>
     <script type="application/javascript" src="/common/fake-context-menu/constants.js"></script>
+    <script type="application/javascript" src="/common/handle-accel-key.js"></script>
     <script type="application/javascript" src="/common/Configs.js"></script>
     <script type="application/javascript" src="/common/common.js"></script>
     <script type="application/javascript" src="/common/l10n.js"></script>
