Apply browser theme color #1526

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -32,6 +32,7 @@
     <style id="size-definition" type="text/css"></style>
     <style id="contextual-identity-styling" type="text/css"></style>
     <link id="style-loader" rel="stylesheet" type="text/css" href=""/>
+    <style id="browser-theme-definition" type="text/css"></style>
     <style id="user-style-rules" type="text/css"></style>
   </head>
   <body>
